--- a/EnsembleVote.ipynb
+++ b/EnsembleVote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "7cc95410-f388-4802-a9f9-299f579293a9",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from mlxtend.classifier import EnsembleVoteClassifier\n",
     "from lightgbm import LGBMClassifier\n",
+    "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "# Read the dataset\n",
     "train = pd.read_csv('./dataset/train.csv')\n",
@@ -28,11 +29,11 @@
     "        X_facts = vectorizer.fit_transform(df['facts'])\n",
     "    else:\n",
     "        X_facts = vectorizer.transform(df['facts'])\n",
-    "    X_party1 = vectorizer.transform(df['first_party'])\n",
-    "    X_party2 = vectorizer.transform(df['second_party'])\n",
+    "    #X_party1 = vectorizer.transform(df['first_party'])\n",
+    "    #X_party2 = vectorizer.transform(df['second_party'])\n",
     "\n",
-    "    X = np.concatenate([X_party1.todense(), X_party2.todense(), X_facts.todense()], axis=1)\n",
-    "    return X\n",
+    "    #X = np.concatenate([X_party1.todense(), X_party2.todense(), X_facts.todense()], axis=1)\n",
+    "    return X_facts\n",
     "\n",
     "X_train = get_vector(vectorizer, train, True)\n",
     "y_train = train[\"first_party_winner\"]\n",
@@ -44,7 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
+   "id": "a59fc149-f790-4220-bf53-cee52ecec5a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smote = SMOTE(random_state=42)\n",
+    "X_train, y_train = smote.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "0f6bf087-d33b-4f5d-ae1c-08a7bc6f77cb",
    "metadata": {},
    "outputs": [
@@ -52,9 +64,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf Validation Accuracy: 0.6512096774193549\n",
-      "lr Validation Accuracy: 0.6532258064516129\n",
-      "lgbm Validation Accuracy: 0.6108870967741935\n"
+      "rf Validation Accuracy: 0.6270161290322581\n",
+      "lr Validation Accuracy: 0.5826612903225806\n",
+      "lgbm Validation Accuracy: 0.6169354838709677\n"
      ]
     }
    ],
@@ -79,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "a5d9c434-b2ca-46f5-8991-bb37bb3b4d58",
    "metadata": {},
    "outputs": [],
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "6db8a1a1-fc3e-4bee-93f0-39e557bf25e4",
    "metadata": {},
    "outputs": [
@@ -99,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble Validation Accuracy: 0.6411290322580645\n"
+      "Ensemble Validation Accuracy: 0.6129032258064516\n"
      ]
     }
    ],
@@ -113,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "32bae7c2-2266-4205-ac7a-10a1da78cc48",
    "metadata": {},
    "outputs": [
@@ -133,31 +145,35 @@
     "submission = pd.DataFrame({'ID': test['ID'], 'first_party_winner': y_pred_test})\n",
     "\n",
     "# Save the submission file\n",
-    "submission.to_csv('ensemble_submission.csv', index=False)\n",
+    "submission.to_csv('ensemble_submission_3.csv', index=False)\n",
     "print(\"Submission file saved.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "7b50dfdb-8e34-4916-918e-2a7c97761654",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'EnsembleVoteClassifier' object has no attribute 'estimators_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15960\\2324242532.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Access the base models in the ensemble\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mensemble\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mestimators_\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Base Model: {name}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Hyperparameters: {model.get_params()}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"------------------------\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'EnsembleVoteClassifier' object has no attribute 'estimators_'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Model: rf\n",
+      "Hyperparameters: {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': None, 'max_features': 'auto', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': None, 'verbose': 0, 'warm_start': False}\n",
+      "------------------------\n",
+      "Base Model: lr\n",
+      "Hyperparameters: {'C': 1.0, 'class_weight': None, 'dual': False, 'fit_intercept': True, 'intercept_scaling': 1, 'l1_ratio': None, 'max_iter': 100, 'multi_class': 'auto', 'n_jobs': None, 'penalty': 'l2', 'random_state': None, 'solver': 'lbfgs', 'tol': 0.0001, 'verbose': 0, 'warm_start': False}\n",
+      "------------------------\n",
+      "Base Model: lgbm\n",
+      "Hyperparameters: {'boosting_type': 'gbdt', 'class_weight': None, 'colsample_bytree': 1.0, 'importance_type': 'split', 'learning_rate': 0.1, 'max_depth': -1, 'min_child_samples': 20, 'min_child_weight': 0.001, 'min_split_gain': 0.0, 'n_estimators': 100, 'n_jobs': -1, 'num_leaves': 31, 'objective': None, 'random_state': None, 'reg_alpha': 0.0, 'reg_lambda': 0.0, 'silent': 'warn', 'subsample': 1.0, 'subsample_for_bin': 200000, 'subsample_freq': 0}\n",
+      "------------------------\n"
      ]
     }
    ],
    "source": [
     "# Access the base models in the ensemble\n",
-    "for name, model in ensemble.named_classifiers_.items():\n",
+    "for name, model in base_models:\n",
     "    print(f\"Base Model: {name}\")\n",
     "    print(f\"Hyperparameters: {model.get_params()}\")\n",
     "    print(\"------------------------\")\n"
