--- a/EnsembleVote.ipynb
+++ b/EnsembleVote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "7cc95410-f388-4802-a9f9-299f579293a9",
    "metadata": {},
    "outputs": [],
@@ -17,6 +17,7 @@
     "from mlxtend.classifier import EnsembleVoteClassifier\n",
     "from lightgbm import LGBMClassifier\n",
     "from imblearn.over_sampling import SMOTE\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "# Read the dataset\n",
     "train = pd.read_csv('./dataset/train.csv')\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "a59fc149-f790-4220-bf53-cee52ecec5a6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "0f6bf087-d33b-4f5d-ae1c-08a7bc6f77cb",
    "metadata": {},
    "outputs": [
@@ -64,9 +65,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf Validation Accuracy: 0.6270161290322581\n",
+      "rf Validation Accuracy: 0.6129032258064516\n",
       "lr Validation Accuracy: 0.5826612903225806\n",
-      "lgbm Validation Accuracy: 0.6169354838709677\n"
+      "lgbm Validation Accuracy: 0.6169354838709677\n",
+      "xgb Validation Accuracy: 0.5705645161290323\n"
      ]
     }
    ],
@@ -75,7 +77,8 @@
     "base_models = [\n",
     "    ('rf', RandomForestClassifier()),\n",
     "    ('lr', LogisticRegression()),\n",
-    "    ('lgbm', LGBMClassifier())\n",
+    "    ('lgbm', LGBMClassifier()),\n",
+    "    ('xgb', XGBClassifier())\n",
     "]\n",
     "\n",
     "# Initialize the EnsembleVoteClassifier\n",
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "a5d9c434-b2ca-46f5-8991-bb37bb3b4d58",
    "metadata": {},
    "outputs": [],
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "6db8a1a1-fc3e-4bee-93f0-39e557bf25e4",
    "metadata": {},
    "outputs": [
@@ -111,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble Validation Accuracy: 0.6129032258064516\n"
+      "Ensemble Validation Accuracy: 0.6108870967741935\n"
      ]
     }
    ],
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "32bae7c2-2266-4205-ac7a-10a1da78cc48",
    "metadata": {},
    "outputs": [
@@ -145,7 +148,7 @@
     "submission = pd.DataFrame({'ID': test['ID'], 'first_party_winner': y_pred_test})\n",
     "\n",
     "# Save the submission file\n",
-    "submission.to_csv('ensemble_submission_3.csv', index=False)\n",
+    "submission.to_csv('ensemble_submission_4.csv', index=False)\n",
     "print(\"Submission file saved.\")\n"
    ]
   },
