--- a/LSVM.ipynb
+++ b/LSVM.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "56f10c03-dcf2-40e0-b98e-596a4435cb26",
    "metadata": {},
    "outputs": [
@@ -76,16 +76,22 @@
       "C:\\Anaconda\\lib\\site-packages\\sklearn\\utils\\validation.py:593: FutureWarning: np.matrix usage is deprecated in 1.0 and will raise a TypeError in 1.2. Please convert to a numpy array with np.asarray. For more information see: https://numpy.org/doc/stable/reference/generated/numpy.matrix.html\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission file saved.\n"
+     ]
     }
    ],
    "source": [
-    "submit = pd.read_csv('./dataset/sample_submission.csv')\n",
-    "\n",
     "pred = model.predict(X_test)\n",
     "\n",
-    "submit['first_party_winner'] = pred\n",
-    "submit.to_csv('./baseline_submit.csv', index=False)\n",
-    "print('Done')"
+    "submission = pd.DataFrame({'ID': test['ID'], 'first_party_winner': pred})\n",
+    "\n",
+    "submission.to_csv('LSVM_submission.csv', index=False)\n",
+    "print(\"Submission file saved.\")"
    ]
   }
  ],
