--- a/nltk-ensemble.ipynb
+++ b/nltk-ensemble.ipynb
@@ -38,11 +38,9 @@
     "    tokens = word_tokenize(text)\n",
     "    return tokens\n",
     "\n",
-    "def get_vector(df, train_mode):\n",
-    "    if train_mode:\n",
-    "        df['tokens'] = df['facts'].apply(tokenize)\n",
-    "    else:\n",
-    "        df['tokens'] = df['facts'].apply(tokenize)\n",
+    "def get_vector(df):\n",
+    "    df['tokens'] = df['facts'].apply(tokenize)\n",
+    "\n",
     "    \n",
     "    tokenized_text = df['tokens'].apply(lambda x: ' '.join(x))\n",
     "    X_party1 = df['first_party']\n",
@@ -51,9 +49,9 @@
     "    X = np.concatenate([X_party1.values.reshape(-1, 1), X_party2.values.reshape(-1, 1), tokenized_text.values.reshape(-1, 1)], axis=1)\n",
     "    return X\n",
     "\n",
-    "X_train = get_vector(train, True)\n",
+    "X_train = get_vector(train)\n",
     "y_train = train[\"first_party_winner\"]\n",
-    "X_test = get_vector(test, False)"
+    "X_test = get_vector(test)"
    ]
   },
   {
